Fix unreadable font color inside footer

--- a/style.css
+++ b/style.css
@@ -96,5 +96,5 @@ body {
   text-align: center;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: hsl(228, 100%, 86%);
 }
